v0.4.1
Fix: afterlayout call moved to js_after_constructor in BasicApp
Fix: cleaner persistent_config handling
New: some class-level configuration enabled for FormPanel

v0.4.0
2009-05-07
Refactor: got rid of NetzkeFormPanelField and NetzkeGridPanelColumn classes along with their tables. The layout is now stored in netzke_preferences.
New: dynamic hiding of columns from column menu in GridPanel.
New: FormPanel now supports combo boxes.
Fix: config[:bbar] set to 'false' now works in grids with pagination
New: you can specify :preloaded => true in a tab config in TabPanel to preload the widget in that tab along with the TabPanel itself
New: hideBusy added to Ext.StatusBar
Fix: assigning association (a Boss to a Clerk) by virtual column (like boss__name) works now
Fix: an old bug that made GridPanel misbehave after reordering the columns

v0.3.10
BasicApp-based widgets can now introduce arbitrary layout, following the convention of defining "main-panel" and "main-toolbar" panels with layout 'fit'.

v0.3.9.1
Bug fix: (regression) appLoaded() in BasicApp gets executed again

v0.3.9
AccordionPanel tests added
TabPanel works now
AccordionPanel replaced with more intuitive TabPanel in the configuration window
Code clean-up by using "single" option to call appLoaded() on "afterlayout"
Table editor bug fix

v0.3.8
Fixing Ext's EditableItem render problem.
Filters by default enabled again in GridPanel.
GridPanel enhancement: base_params get sent along with post_data.

v0.3.7
Netzke-core version sync.
Rails 2.3.2 compatibility.

v0.3.6
Netzke-core v0.2.9 compatibility.
Cleaner handling of custom renderers in GridPanel.
New FormPanel-based PropertyEditor replaces PropertyGrid.
Xcheckbox and check-column introduced.
TODO file added.
Bug fix: in TableEditor, the grid now responses on events also after being reconfigured.
Bug fix: a couple of IE-related bugs.
Significant code clean-up.

v0.3.5
Netzke-core v0.2.8 compatibility.

v0.3.4
Quick tips added to the "tools".